按字典序一个一个重新比对上游代码，已经处理到了EnchantmentHelperMixin